--- a/public/journeyal.html
+++ b/public/journeyal.html
@@ -14,15 +14,15 @@
     <h1 class="brand">HANDLE-A</h1>
     <div class="sections" id="section-rig">
       <!-- <h3 class="brand"id="section-rig">RIG</h3> -->
-    <a href="rigs.html"><h3 class="brand">RIGS</h3></a>
+      <h3 class="brand">RIGS</h3>
     </div>
     <div class="sections" id="section-travels">
       <!-- <h3 class="brand"id="section-travels">TRAVELS</h3> -->
-    <a href="travels.html"><h3 class="brand">TRAVELS</h3></a>
+      <h3 class="brand">TRAVELS</h3>
     </div>
     <div class="sections" id="section-projects">
       <!-- <h3 class="brand"id="section-projects">PROJECTS</h3> -->
-    <a href="projects.html"><h3 class="brand">PROJECTS</h3></a>
+      <h3 class="brand">PROJECTS</h3>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
