Update Files` OKTA_CLIENT_ID={yourClientyId} OKTA_CLIENT_ID={yourClientyId}

--- a/public/stanDansStressStand.html
+++ b/public/stanDansStressStand.html
@@ -11,19 +11,22 @@
 
 </head>
 <body>
-    <h1 class="brand">HANDLE-A</h1>
-    <div class="sections" id="section-rig">
-      <!-- <h3 class="brand"id="section-rig">RIG</h3> -->
-    <a href="rigs.html"><h3 class="brand">RIGS</h3></a>
-    </div>
-    <div class="sections" id="section-travels">
+    <h1 class="brand">Stan Dan's Plans</h1>
+    <div class="sections" id="writings">
       <!-- <h3 class="brand"id="section-travels">TRAVELS</h3> -->
-    <a href="travels.html"><h3 class="brand">TRAVELS</h3></a>
+      <h3 class="brand company-header">Stan Danley's Stress Ball Stand</h3>
     </div>
-    <div class="sections" id="section-projects">
-      <!-- <h3 class="brand"id="section-projects">PROJECTS</h3> -->
-    <a href="stanDansStressStand.html"><h3 class="brand">PROJECTS</h3></a>
-    <a href="standansplans.html"><h3 class="brand">Stan Dan's Plans</h3></a>
+    <div class="journal-entry">
+      <div class="journal-entry-header">
+        <h1 class="company-header">Some reviews from our customers:</h1>
+      </div>
+      <div class="journal-entry-header">
+        <h2>Flavor: Art Projects</h2>
+      </div>
+      <div class="journal-entry-content">
+        <p>It seems like art projects always seem to come out of no where, even though...you know... they've been there for months.
+        </p>
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
