--- a/public/journeyal.html
+++ b/public/journeyal.html
@@ -12,17 +12,22 @@
 </head>
 <body>
     <h1 class="brand">HANDLE-A</h1>
-    <div class="sections" id="section-rig">
-      <!-- <h3 class="brand"id="section-rig">RIG</h3> -->
-      <h3 class="brand">RIGS</h3>
-    </div>
-    <div class="sections" id="section-travels">
+    <div class="sections" id="writings">
       <!-- <h3 class="brand"id="section-travels">TRAVELS</h3> -->
-      <h3 class="brand">TRAVELS</h3>
+      <h3 class="brand">TRAVELS-Writings:</h3>
     </div>
-    <div class="sections" id="section-projects">
-      <!-- <h3 class="brand"id="section-projects">PROJECTS</h3> -->
-      <h3 class="brand">PROJECTS</h3>
+    <div class="journal-entry">
+      <div class="journal-entry-header">
+        <h1>Journal Entry Name:</h1>
+      </div>
+      <div class="journal-entry-header">
+        <h2>Journal subtitle</h2>
+      </div>
+      <div class="journal-entry-content">
+        <p>Journal content, here's where some talking stuff goes. 
+          Some more goes here...
+        </p>
+      </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
