Reorder file structure and rename directories`

--- a/public/admin.html
+++ b/public/admin.html
@@ -13,7 +13,7 @@
      <script src="https://unpkg.com/vue-firestore"></script>
      <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-     <link rel="stylesheet" href="./CSS/main.css">
+     <link rel="stylesheet" href="./styles/main.css">
 
     <section class="section">
       <h1 class="title">Admin</h1>
