Consolidate all functions to order page

--- a/public/StanDanley/standansplans.html
+++ b/public/StanDanley/standansplans.html
@@ -9,31 +9,18 @@
     <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-firestore.js"></script>
     <script src="https://unpkg.com/vue"></script>
     <script src="https://unpkg.com/vue-firestore"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+
     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="../styles/styles.css">
 
 </head>
 <body>
-    <!-- <h1 class="brand company-header">Stan Dan's Plans</h1> -->
-    <div class="sections" id="writings">
-      <!-- <h3 class="brand"id="section-travels">TRAVELS</h3> -->
-      <h3 class="brand company-header">Stan Dan's Plans</h3>
-      <h3 class="brand company-header">Stress Eradication Project</h3>
+  <div class="header columns">
+    <div class="column">
+      <a></a>
     </div>
-    <div class="journal-entry">
-      <!-- <div class="journal-entry-header">
-        <h1 class="company-header">Some reviews from our customers:</h1>
-      </div>
-      <div class="journal-entry-header">
-        <h2>Flavor: Art Projects</h2>
-      </div>
-      <div class="journal-entry-content">
-        <p>It seems like art projects always seem to come out of no where, even though...you know... they've been there for months.
-        </p>
-      </div> -->
-    </div>
+  </div>
       <div class="column">
         <section class="section">
           <div class="container" id="app">
@@ -117,6 +104,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
       integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
-        <script src="main.js"></script>
-<script src="../JS/scripts.js"></script>
+        <script src="../scripts/main.js"></script>
+<script src="../scripts/scripts.js"></script>
 </html>
