--- a/public/StanDanley/viewDataVis.html
+++ b/public/StanDanley/viewDataVis.html
@@ -9,16 +9,12 @@
     <!-- Add the Firebase and Cloud Firestore libraries to your app -->
     <script src="https://www.gstatic.com/firebasejs/8.2.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.1.2/firebase-firestore.js"></script>
-     <script src="https://unpkg.com/vue"></script>
-     <script src="https://unpkg.com/vue-firestore"></script>
-     <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-
+    <script src="https://unpkg.com/vue"></script>
+    <script src="https://unpkg.com/vue-firestore"></script>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <div id="chart_div"></div>
-
-
-    <script src="main.js"></script>
+    <script src="../scripts/main.js"></script>
 
 </body>
 </html>
