--- a/public/StanDanley/admin.html
+++ b/public/StanDanley/admin.html
@@ -13,7 +13,7 @@
      <script src="https://unpkg.com/vue-firestore"></script>
      <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css">
      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-     <link rel="stylesheet" href="./styles/main.css">
+     <link rel="stylesheet" href="../styles/main.css">
 
     <section class="section">
       <h1 class="title">Admin</h1>
@@ -118,7 +118,7 @@
 
 
 
-    <script src="main.js"></script>
+    <script src="../scripts/main.js"></script>
 
 </body>
 </html>
