--- a/public/StanDanley/view.html
+++ b/public/StanDanley/view.html
@@ -12,13 +12,14 @@
      <script src="https://unpkg.com/vue"></script>
      <script src="https://unpkg.com/vue-firestore"></script>
      <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 
     <div id="chart_div"></div>
 
 
-    <script src="main.js"></script>
+    <script src="../scripts/main.js"></script>
 
 </body>
 </html>
