--- a/public/index.html
+++ b/public/index.html
@@ -5,32 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <title>HANDLE-A</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+  <link rel="stylesheet" href="styles/styles.css">
 
 </head>
 <body>
     <h1 class="brand">HANDLE-A</h1>
     <div class="sections" id="section-rig">
-      <!-- <h3 class="brand"id="section-rig">RIG</h3> -->
-    <a href="rigs.html"><h3 class="brand">RIGS</h3></a>
+      <a href="StanDanley/standansplans.html"><h3 class="brand">Stan Dan's Plans</h3></a>
+    <!-- <a href="rigs.html"><h3 class="brand">RIGS</h3></a> -->
     </div>
     <div class="sections" id="section-travels">
-      <!-- <h3 class="brand"id="section-travels">TRAVELS</h3> -->
-    <a href="travels.html"><h3 class="brand">TRAVELS</h3></a>
+      <a href="travels.html"><h3 class="brand">TRAVELS</h3></a>
     </div>
     <div class="sections" id="section-projects">
-      <!-- <h3 class="brand"id="section-projects">PROJECTS</h3> -->
-    <a href="stanDansStressStand.html"><h3 class="brand">PROJECTS</h3></a>
-    <a href="standansplans.html"><h3 class="brand">Stan Dan's Plans</h3></a>
+      <a href="stanDansStressStand.html"><h3 class="brand">PROJECTS</h3></a>
     </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 <script src="../JS/scripts.js"></script>
 </html>
